<resources>
    <string name="app_name">Tasks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="task_name">Task Name</string>
    <string name="task_name_hint">Enter the name of your task</string>
    <string name="priority">Priority</string>
    <string name="description">Description (Optional)</string>
    <string name="description_hint">Enter description</string>
    <string name="task_due_date">Due Date</string>
    <string name="create">Create</string>

</resources>